@@ -24,7 +24,7 @@ configurations {
 dependencies {
     compile group: 'ch.ehi', name: 'ehibasics', version: '1.4.1'
     compile group: 'ch.interlis', name: 'iox-api', version: '1.0.4'
-    compile group: 'ch.interlis', name: 'iox-ili', version: '1.21.7'
+    compile group: 'ch.interlis', name: 'iox-ili', version: '1.21.8+'
     compile group: 'ch.interlis', name: 'ili2c-tool', version: "5.2.3"
     compile group: 'ch.interlis', name: 'ili2c-core', version: "5.2.3"
     testCompile group: 'junit', name: 'junit', version: '4.12'
